--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ body {
   grid-column: 4;
   grid-column-start: 1;
   grid-column-end: 5;
-  background-image: url(/img/perro1.jpg);
+  background-image: url(./img/perro1.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -218,7 +218,7 @@ body {
   grid-row: 2;
   grid-row-start: 2;
   grid-row-end: 3;
-  background-image: url(/img/refugio.jpg);
+  background-image: url(./img/refugio.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -230,7 +230,7 @@ body {
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 4;
-  background-image: url(/img/grid.jpg);
+  background-image: url(./img/grid.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -242,7 +242,7 @@ body {
   grid-row: 1;
   grid-row-start: 3;
   grid-row-end: 4;
-  background-image: url(/img/adoptado.jpg);
+  background-image: url(./img/adoptado.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -253,7 +253,7 @@ body {
   grid-column-start: 1;
   grid-column-end: 3;
   grid-row-start: 4;
-  background-image: url(/img/adoptado3.jpg);
+  background-image: url(./img/adoptado3.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -263,7 +263,7 @@ body {
   grid-column-start: 3;
   grid-column-end: 5;
   grid-row-start: 4;
-  background-image: url(/img/108956901_m.jpg);
+  background-image: url(./img/108956901_m.jpg);
   background-size: cover;
   background-position: center;
 }
