cambios en quienes y scss

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -223,7 +223,11 @@ body {
     align-items: center; }
     .container__report__uno .video__uno {
       width: 40rem;
-      margin-bottom: 1rem; } }
+      margin-bottom: 1rem; }
+  .perrin__2 .parraf__3, .perrin__2 .parraf__2 {
+    width: 60rem;
+    align-content: left;
+    margin-left: 83px; } }
 
 @media only screen and (max-width: 700px) {
   .cartasAdopcion {
@@ -250,7 +254,28 @@ body {
     align-items: center; }
     .container__report__uno .video__uno {
       width: 20rem;
-      margin-bottom: 1rem; } }
+      margin-bottom: 1rem; }
+  .perrin__2 .parraf__3, .perrin__2 .parraf__2 {
+    width: 18rem;
+    align-content: center;
+    margin-left: 70px; } }
+
+@media only screen and (max-width: 400px) {
+  .perrin__2 .parraf__3, .perrin__2 .parraf__2 {
+    width: 18rem;
+    align-content: center;
+    margin-left: 50px; } }
+
+.perrin__2 .parraf3 {
+  width: 70rem;
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  margin-left: 8rem;
+  margin-top: 5rem;
+  line-height: 2rem;
+  color: white;
+  font-size: 18px; }
 
 .galeria__grid {
   width: 100%;
