--- a/scss/quienes.scss
+++ b/scss/quienes.scss
@@ -39,8 +39,8 @@
       grid-column: 4;
       grid-column-start: 1;
       grid-column-end: 5;
-      background-image: url(../img/perro1.jpg);
-      background-size: cover;
+      background-image: url(../img/126974769_m.jpg);
+      background-size:cover;
       background-position: center;
     }
 
@@ -51,8 +51,8 @@
       grid-row: 2;
       grid-row-start: 2;
       grid-row-end: 3;
-      background-image: url(../img/refugio.jpg);
-      background-size: cover;
+      background-image: url(../img/perro1.jpg);
+      background-size:cover;
       background-position: center;
     }
 
