--- a/css/style.css
+++ b/css/style.css
@@ -374,34 +374,25 @@ body {
 
 /*error*/
 
-body{
-  margin: 0;
-  padding: 0;
-  font-family: "montserrat",sans-serif;
-  min-height: 100vh;
-  background-image: linear-gradient(125deg,#248a9f,#248a9f);
-}
-
-.container{
+.cont__error{
   width: 100%;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   text-align: center;
-  color: #343434
+  color: #ffffff
 }
 
-.container h1{
+.cont__error h1{
   font-size: 160px;
   margin: 0;
   font-weight: 900;
-  letter-spacing: 20px;
-  background: url(bg.jpg) center no-repeat;
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
+  color: white;
+ 
+ 
 }
 
-.container a{
+.cont__error a{
   text-decoration: none;
   background: #e55039aa;
   color: #fff;
@@ -413,7 +404,7 @@ body{
   transition: 0.4s;
 }
 
-.container a:hover{
+.cont__error a:hover{
   background: #e55039;
 }
 
