--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@
   box-sizing: border-box; }
 
 body {
-  background-color: #248a9f;
+  background-color: #ffffff;
   font-family: roboto; }
 
 /*seccion quienes*/
@@ -16,7 +16,7 @@ body {
   margin-left: 8rem;
   margin-top: 5rem;
   line-height: 2rem;
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 18px; }
 
 /*seccion adoptar*/
@@ -31,7 +31,7 @@ body {
     text-align: center;
     width: 100%;
     margin-top: 0rem;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 40px;
     font-weight: bold; }
 
@@ -40,7 +40,7 @@ body {
 
 /*footer*/
 .footer__uno {
-  color: #fff;
+  color: rgb(0, 0, 0);
   margin-top: 5rem;
   padding: 10px;
   text-align: center; }
@@ -53,68 +53,12 @@ body {
 .titulo__uno {
   text-align: center;
   font-size: 30px;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 25px;
   margin-top: 3rem; }
 
 /*busqueda*/
-.container__bus {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  background-color: #b9c8df;
-  padding: 2rem;
-  margin-top: 3rem; }
-  .container__bus .form__group {
-    background-color: #b9c8df;
-    top: -20px;
-    padding: 10px 5px 10px; }
-    .container__bus .form__group .control__label {
-      margin-left: 110px;
-      color: white;
-      margin-bottom: -40px;
-      background-color: #b9c8df; }
-      .container__bus .form__group .control__label label {
-        background-color: #b9c8df;
-        text-align: center;
-        font-size: 20px;
-        color: black; }
-    .container__bus .form__group .option__group {
-      background-color: #b9c8df;
-      margin-top: 15px;
-      padding: 20px; }
-      .container__bus .form__group .option__group select {
-        width: 253px;
-        padding: 10px 30px 10px 40px;
-        outline: none;
-        font-size: 18px;
-        border-radius: 15px;
-        border: 1px;
-        background-color: white;
-        color: #030303;
-        margin-top: 10px; }
-  .container__bus .box__but .boton__sel {
-    margin-left: 0px;
-    background-color: #f0304a;
-    width: 200px;
-    height: 37px;
-    margin-top: 55px;
-    outline: none;
-    font-size: medium;
-    border-radius: 15px; }
-  .container__bus .box__but .boton__sel:hover {
-    background-color: #db0000;
-    color: white; }
-  .container__bus .butom__radio {
-    line-height: 1.6;
-    font-size: 20px;
-    width: 100%;
-    color: #161616; }
-    .container__bus .butom__radio .to__comuna {
-      margin-top: 20px;
-      text-align: center;
-      background-color: #b9c8df; }
+
 
 /*adoptame*/
 /*titulos*/
@@ -136,10 +80,11 @@ body {
 .cartasAdopcion {
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: 4rem; }
+  margin-bottom: 4em; }
   .cartasAdopcion .card {
     color: slategrey;
-    border-radius: 5%; }
+    border-radius: 5%;
+    border: 1px solid black ; }
     .cartasAdopcion .card .card-img-top {
       margin-top: 6px;
       margin-left: 8px;
@@ -158,7 +103,7 @@ body {
 
 /*quines somos*/
 .quien__uno {
-  background-color: #b9c8df;
+  background-color: #0d7036;
   padding: 3rem;
   display: flex;
   justify-content: space-evenly; }
@@ -168,8 +113,8 @@ body {
     width: 30rem; }
 
 .parraf__uno {
-  background-color: #b9c8df;
-  color: black;
+  background-color: #0d7036;
+  color: rgb(255, 255, 255);
   width: 30rem;
   line-height: 2rem; }
 
@@ -178,14 +123,14 @@ body {
   text-align: center;
   font-size: 30px;
   font-weight: bold;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 15px; }
 
 .tit_titulo .ayuda__tit {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 10px; }
 
 /*videos*/
@@ -200,7 +145,7 @@ body {
 .titulos__mapa {
   text-align: center;
   margin-top: 1.5rem;
-  color: white; }
+  color: rgb(0, 0, 0); }
 
 @media only screen and (max-width: 1080px) {
   .cartasAdopcion {
